--- a/demo1/src/main/resources/templates/form3.html
+++ b/demo1/src/main/resources/templates/form3.html
@@ -10,5 +10,6 @@
 		name: <input type="text" name="name"> <br>
 		age: <input type="text" name="age"> <br>
 		<input type="submit" value="전송">
+	</form>
 </body>
 </html>
