--- a/Student/src/main/resources/templates/list.html
+++ b/Student/src/main/resources/templates/list.html
@@ -15,9 +15,7 @@
 			<th>조회</th>
 		</tr>
 		<tr th:each="student: ${studentList}">
-			<td>
-				<a th:href="@{|/student/${student.id}|}" th:text="${student.id}"></a>
-			</td>
+			<td th:text="${student.id}"></td>
 			<td th:text="${student.studentName}"></td>
 			<td th:text="${student.studentNumber}"></td>
 			<td th:text="${student.studentMobile}"></td>
