--- a/Student/src/main/resources/templates/detail.html
+++ b/Student/src/main/resources/templates/detail.html
@@ -11,30 +11,30 @@
 			<td>
 				번호
 			</td>
-			<td th:text="${student.id}">				
+			<td th:text="${student.id}">
 			</td>
 		</tr>
 		<tr>
 			<td>
 				이름
 			</td>
-			<td th:text="${student.studentName}">				
+			<td th:text="${student.studentName}">
 			</td>
 		</tr>
 		<tr>
 			<td>
 				학번
 			</td>
-			<td th:text="${student.studentNumber}">				
+			<td th:text="${student.studentNumber}">
 			</td>
-		</tr>		
+		</tr>
 		<tr>
 			<td>
 				전화번호
 			</td>
-			<td th:text="${student.studentMobile}">				
+			<td th:text="${student.studentMobile}">
 			</td>
-		</tr>		
+		</tr>
 	</table>
 </body>
-</html>
+</html>s
